--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
     sdk: flutter
   flutter_secure_storage: ^9.2.2
   go_router: ^14.6.1
+  http: ^1.2.2
   lottie: ^3.1.3
   shared_preferences: ^2.3.3
 
