--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,8 @@ environment:
   sdk: ^3.5.4
 
 dependencies:
+  provider: ^6.1.1
+
   cupertino_icons: ^1.0.8
   dotlottie_loader: ^0.0.4
   flutter:
@@ -16,6 +18,8 @@ dependencies:
   http: ^1.2.2
   lottie: ^3.1.3
   shared_preferences: ^2.3.3
+  google_fonts: ^6.2.1
+
 
 dev_dependencies:
   flutter_test:
