--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,11 +4,10 @@ publish_to: 'none'
 version: 0.1.0
 
 environment:
-  sdk: ^3.5.4
+  sdk: 3.5.3
 
 dependencies:
   provider: ^6.1.1
-
   cupertino_icons: ^1.0.8
   dotlottie_loader: ^0.0.4
   flutter:
@@ -19,6 +18,7 @@ dependencies:
   lottie: ^3.1.3
   shared_preferences: ^2.3.3
   google_fonts: ^6.2.1
+  flutter_launcher_icons: ^0.14.2
 
 
 dev_dependencies:
